pytigergraph/1.7/ai/copilot.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot)[Next](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
  *     * [Overview](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
  *     * [Getting Started](https://docs.tigergraph.com/pytigergraph/1.7/getting-started/)
      * [Installing pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.7/getting-started/install)
      * [Connecting to TigerGraph](https://docs.tigergraph.com/pytigergraph/1.7/getting-started/connection)
      * [pyTigerGraph 101](https://docs.tigergraph.com/pytigergraph/1.7/getting-started/101)
  *     * [Core Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/)
      * [TigerGraphConnection](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/base)
      * [Authentication Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/auth)
      * [Vertex Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/vertex)
      * [Edge Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/edge)
      * [Query Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/query)
      * [UDT Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/udt)
      * [GSQL Interface](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/gsql)
      * [Loading Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/loading)
      * [Path Finding Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/path)
      * [Schema Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/schema)
      * [Utility Functions](https://docs.tigergraph.com/pytigergraph/1.7/core-functions/utils)
  *     * [GDS Functions](https://docs.tigergraph.com/pytigergraph/1.7/gds/)
      * [Factory Functions](https://docs.tigergraph.com/pytigergraph/1.7/gds/gds)
      * [Data Loaders](https://docs.tigergraph.com/pytigergraph/1.7/gds/dataloaders)
      * [Featurizer](https://docs.tigergraph.com/pytigergraph/1.7/gds/featurizer)
      * [Metrics](https://docs.tigergraph.com/pytigergraph/1.7/gds/metrics)
      * [Splitters](https://docs.tigergraph.com/pytigergraph/1.7/gds/splitters)
      * [Transforms](https://docs.tigergraph.com/pytigergraph/1.7/gds/transforms)
        * [PyTorch Geometric Transforms](https://docs.tigergraph.com/pytigergraph/1.7/gds/pyg_transforms)
        * [NodePiece Transforms](https://docs.tigergraph.com/pytigergraph/1.7/gds/nodepiece_transforms)
      * [Trainer](https://docs.tigergraph.com/pytigergraph/1.7/gds/trainer)
      * [Models](https://docs.tigergraph.com/pytigergraph/1.7/gds/models)
        * [GraphSAGE](https://docs.tigergraph.com/pytigergraph/1.7/gds/graphsage)
        * [NodePiece](https://docs.tigergraph.com/pytigergraph/1.7/gds/nodepiece)
  *     * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot)
  *     * [Datasets](https://docs.tigergraph.com/pytigergraph/1.7/datasets/datasets)
      * [Dataset Object](https://docs.tigergraph.com/pytigergraph/1.7/datasets/datasets_object)
  *     * [Visualization](https://docs.tigergraph.com/pytigergraph/1.7/visualization/visualization)
  *     * [Object Oriented Schema](https://docs.tigergraph.com/pytigergraph/1.7/object_oriented_schema/schema-def)
  *     * [Contributing](https://docs.tigergraph.com/pytigergraph/1.7/contributing/)
  *     * [Release Notes](https://docs.tigergraph.com/pytigergraph/1.7/release-notes/)
      * [Legacy Version Documentation](https://docs.tigergraph.com/pytigergraph/1.7/release-notes/legacy-tg-versions)


pyTigerGraph 1.7
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [pyTigerGraph 1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot)


[Edit this Page](https://github.com/tigergraph/pytigergraph-docs/edit/v1.7/modules/ai/pages/copilot.adoc)
### Contents
  * [configureInquiryAIHost()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_configureinquiryaihost)
  * [configureCoPilotHost()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_configurecopilothost)
  * [registerCustomQuery()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_registercustomquery)
  * [updateCustomQuery()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_updatecustomquery)
  * [deleteCustomQuery()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_deletecustomquery)
  * [retrieveDocs()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_retrievedocs)
  * [query()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_query)
  * [coPilotHealth()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_copilothealth)
  * [initializeSupportAI()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_initializesupportai)
  * [createDocumentIngest()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_createdocumentingest)
  * [runDocumentIngest()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_rundocumentingest)
  * [searchDocuments()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_searchdocuments)
  * [answerQuestion()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_answerquestion)
  * [forceConsistencyUpdate()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_forceconsistencyupdate)


# AI Submodule
### Contents
  * [configureInquiryAIHost()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_configureinquiryaihost)
  * [configureCoPilotHost()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_configurecopilothost)
  * [registerCustomQuery()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_registercustomquery)
  * [updateCustomQuery()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_updatecustomquery)
  * [deleteCustomQuery()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_deletecustomquery)
  * [retrieveDocs()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_retrievedocs)
  * [query()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_query)
  * [coPilotHealth()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_copilothealth)
  * [initializeSupportAI()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_initializesupportai)
  * [createDocumentIngest()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_createdocumentingest)
  * [runDocumentIngest()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_rundocumentingest)
  * [searchDocuments()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_searchdocuments)
  * [answerQuestion()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_answerquestion)
  * [forceConsistencyUpdate()](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_forceconsistencyupdate)


The AI submodule is used to interact with the TigerGraph CoPilot service. It allows users to register custom queries, run natural language queries, and interact with the CoPilot service.
To use the AI submodule, you must first create a TigerGraphConnection object, and verify that you have a TigerGraph CoPilot service running.
For example, to use the AI submodule, you can run the following code:
```
from pyTigerGraph import TigerGraphConnection
conn = TigerGraphConnection(
  host="https://YOUR_DB_ADDRESS",
  graphname="DigitalInfra",
  username="YOUR_DB_USERNAME",
  password="YOUR_DB_PASSWORD"
)
conn.getToken()
conn.ai.configureCoPilotHost(hostname="http://COPILOT_ADDRESS")
conn.ai.query("How many servers are there?")
python![copy icon](https://docs.tigergraph.com/_/img/octicons-16.svg#view-clippy)Copied!

```

For a more detailed and varied examples, see the demo notebooks in the (TigerGraph CoPilot GitHub repository)[<https://github.com/tigergraph/CoPilot/tree/main/copilot/docs/notebooks>].
## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_configureinquiryaihost)configureInquiryAIHost()
`configureInquiryAIHost(hostname: str)`
DEPRECATED: Configure the hostname of the InquiryAI service. Not recommended to use. Use configureCoPilotHost() instead.
#### Parameter:
  * `hostname (str)`: The hostname (and port number) of the InquiryAI serivce.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_configurecopilothost)configureCoPilotHost()
`configureCoPilotHost(hostname: str)`
Configure the hostname of the CoPilot service. Not necessary if using TigerGraph CoPilot on TigerGraph Cloud.
#### Parameter:
  * `hostname (str)`: The hostname (and port number) of the CoPilot serivce.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_registercustomquery)registerCustomQuery()
`registerCustomQuery(query_name: str, description: str = None, docstring: str = None, param_types: dict = None)`
Register a custom query with the InquiryAI service.
#### Parameters:
  * `query_name (str)`: The name of the query being registered. Required.
  * `description (str)`: The high-level description of the query being registered. Only used when using TigerGraph 3.x.
  * `docstring (str)`: The docstring of the query being registered. Includes information about each parameter. Only used when using TigerGraph 3.x.
  * `param_types (Dict[str, str])`: The types of the parameters. In the format {"param_name": "param_type"} Only used when using TigerGraph 3.x.
#### Returns:
Hash of query that was registered.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_updatecustomquery)updateCustomQuery()
`updateCustomQuery(query_name: str, description: str = None, docstring: str = None, param_types: dict = None)`
Update a custom query with the InquiryAI service.
#### Parameters:
  * `query_name (str)`: The name of the query being updated. Required.
  * `description (str)`: The high-level description of the query being updated. Only used when using TigerGraph 3.x.
  * `docstring (str)`: The docstring of the query being updated. Includes information about each parameter. Only used when using TigerGraph 3.x.
  * `param_types (Dict[str, str])`: The types of the parameters. In the format {"param_name": "param_type"} Only used when using TigerGraph 3.x.
#### Returns:
Hash of query that was updated.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_deletecustomquery)deleteCustomQuery()
`deleteCustomQuery(query_name: str)`
Delete a custom query with the InquiryAI service.
#### Parameter:
  * `query_name (str)`: The name of the query being deleted.
#### Returns:
Hash of query that was deleted.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_retrievedocs)retrieveDocs()
`retrieveDocs(query: str, top_k: int = 3)`
Retrieve docs from the vector store.
#### Parameters:
  * `query (str)`: The natural language query to retrieve docs with.
  * `top_k (int)`: The number of docs to retrieve.
#### Returns:
List of docs retrieved.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_query)query()
`query(query)`
Query the database with natural language.
#### Parameter:
  * `query (str)`: Natural language query to ask about the database.
#### Returns:
JSON including the natural language response, a answered_question flag, and answer sources.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_copilothealth)coPilotHealth()
`coPilotHealth()`
Check the health of the CoPilot service.
#### Returns:
JSON response from the CoPilot service.
## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_initializesupportai)initializeSupportAI()
`initializeSupportAI()`
Initialize the SupportAI service.
#### Returns:
JSON response from the SupportAI service.
## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_createdocumentingest)createDocumentIngest()
`createDocumentIngest(data_source, data_source_config, loader_config, file_format)`
Create a document ingest.
#### Parameters:
  * `data_source (str)`: The data source of the document ingest.
  * `data_source_config (dict)`: The configuration of the data source.
  * `loader_config (dict)`: The configuration of the loader.
  * `file_format (str)`: The file format of the document ingest.
#### Returns:
JSON response that contains the load_job_id and data_source_id of the document ingest.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_rundocumentingest)runDocumentIngest()
`runDocumentIngest(load_job_id, data_source_id, data_path)`
Run a document ingest.
#### Parameters:
  * `load_job_id (str)`: The load job ID of the document ingest.
  * `data_source_id (str)`: The data source ID of the document ingest.
  * `data_path (str)`: The data path of the document ingest.
#### Returns:
JSON response from the document ingest.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_searchdocuments)searchDocuments()
`searchDocuments(query, method = "hnswoverlap", method_parameters: dict)`
Search documents.
#### Parameters:
  * `query (str)`: The query to search documents with.
  * `method (str)`: The method to search documents with.
  * `method_parameters (dict)`: The parameters of the method.
#### Returns:
JSON response from the document search.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_answerquestion)answerQuestion()
`answerQuestion(query, method = "hnswoverlap", method_parameters: dict)`
Answer a question.
#### Parameters:
  * `query (str)`: The query to answer the question with.
  * `method (str)`: The method to answer the question with.
  * `method_parameters (dict)`: The parameters of the method.
#### Returns:
JSON response from the question answer.


## [](https://docs.tigergraph.com/pytigergraph/1.7/ai/copilot#_forceconsistencyupdate)forceConsistencyUpdate()
`forceConsistencyUpdate(method = "supportai")`
Force a consistency update for SupportAI embeddings.
#### Parameter:
  * `method (str)`: The doc initialization method to run Currentlty only "supportai" is supported in CoPilot v0.9.
#### Returns:
JSON response from the consistency update.


3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


